tests/transpiler/x/java/cross_join.error
exit status 1
Main.java:26: error: <identifier> expected
         orderId;
                ^
Main.java:27: error: <identifier> expected
         orderCustomerId;
                        ^
Main.java:28: error: <identifier> expected
         pairedCustomerName;
                           ^
Main.java:29: error: <identifier> expected
         orderTotal;
                   ^
Main.java:30: error: <identifier> expected
        Data3( orderId,  orderCustomerId,  pairedCustomerName,  orderTotal) {
                      ^
Main.java:30: error: <identifier> expected
        Data3( orderId,  orderCustomerId,  pairedCustomerName,  orderTotal) {
                                        ^
Main.java:30: error: <identifier> expected
        Data3( orderId,  orderCustomerId,  pairedCustomerName,  orderTotal) {
                                                             ^
Main.java:30: error: <identifier> expected
        Data3( orderId,  orderCustomerId,  pairedCustomerName,  orderTotal) {
                                                                          ^
Main.java:39: error: <identifier> expected
         orderId;
                ^
Main.java:40: error: <identifier> expected
         orderCustomerId;
                        ^
Main.java:41: error: <identifier> expected
         pairedCustomerName;
                           ^
Main.java:42: error: <identifier> expected
         orderTotal;
                   ^
Main.java:43: error: <identifier> expected
        Result4( orderId,  orderCustomerId,  pairedCustomerName,  orderTotal) {
                        ^
Main.java:43: error: <identifier> expected
        Result4( orderId,  orderCustomerId,  pairedCustomerName,  orderTotal) {
                                          ^
Main.java:43: error: <identifier> expected
        Result4( orderId,  orderCustomerId,  pairedCustomerName,  orderTotal) {
                                                               ^
Main.java:43: error: <identifier> expected
        Result4( orderId,  orderCustomerId,  pairedCustomerName,  orderTotal) {
                                                                            ^
16 errors
